--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itsa-react-form",
-  "version": "15.0.17",
+  "version": "15.0.20",
   "description": "React Form which renders a focussable form based upon elements declared by props.items",
   "author": [
     {
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "itsa-jsext": "^1.3.0",
-    "itsa-react-focuscontainer": "^15.0.22"
+    "itsa-react-focuscontainer": "^15.0.25"
   },
   "peerDependencies": {
     "react": "^15.0.1",
@@ -51,10 +51,11 @@
     "eslint-plugin-react": "^4.3.0",
     "istanbul": "^0.3.0",
     "itsa-jsext": "^1.3.0",
-    "itsa-react-button": "^15.2.12",
-    "itsa-react-checkbox": "^15.2.10",
-    "itsa-react-maskedinput": "^15.0.10",
-    "itsa-react-textarea": "^15.0.8",
+    "itsa-react-button": "^15.2.19",
+    "itsa-react-checkbox": "^15.2.15",
+    "itsa-react-input": "^15.0.16",
+    "itsa-react-maskedinput": "^15.0.16",
+    "itsa-react-textarea": "^15.0.14",
     "jsdom": "^7.2.2",
     "jsdom-global": "^1.6.1",
     "jshint": "^2.5.5",
