--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itsa-react-form",
-  "version": "15.0.25",
+  "version": "16.0.0",
   "description": "React Form which renders a focussable form based upon elements declared by props.items",
   "author": [
     {
@@ -10,10 +10,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ItsAsbreuk/xxxxxxxx"
+    "url": "https://github.com/ItsAsbreuk/itsa-react-form"
   },
   "bugs": {
-    "url": "https://github.com/ItsAsbreuk/xxxxxxxx/issues"
+    "url": "https://github.com/ItsAsbreuk/itsa-react-form/issues"
   },
   "keywords": [
     "itsasbreuk",
@@ -24,19 +24,21 @@
   ],
   "main": "./lib/component.jsx",
   "engines": {
-    "node": "*"
+    "node": ">=5"
   },
   "directories": {
     "css": "./css",
     "lib": "./lib"
   },
   "dependencies": {
-    "itsa-jsext": "^1.3.0",
-    "itsa-react-focuscontainer": "^15.0.28"
+    "itsa-jsext": "^1.4.0",
+    "itsa-dom": "^1.2.0",
+    "itsa-react-focuscontainer": "^16.0.0",
+    "prop-types": "^15.5.10"
   },
   "peerDependencies": {
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react": ">=15",
+    "react-dom": ">=15"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
@@ -47,22 +49,23 @@
     "chai": "^3.5.0",
     "chai-equal-jsx": "^1.0.9",
     "css-loader": "^0.23.1",
-    "eslint": "^2.7.0",
-    "eslint-plugin-react": "^4.3.0",
+    "eslint": "^4.0.0",
+    "eslint-plugin-react": "^7.1.0",
     "istanbul": "^0.3.0",
-    "itsa-jsext": "^1.3.0",
-    "itsa-react-button": "^15.2.20",
-    "itsa-react-checkbox": "^15.2.16",
-    "itsa-react-input": "^15.0.17",
-    "itsa-react-maskedinput": "^15.0.17",
-    "itsa-react-textarea": "^15.0.15",
+    "itsa-react-button": "^16.0.0",
+    "itsa-react-checkbox": "^16.0.0",
+    "itsa-react-input": "^16.0.0",
+    "itsa-react-maskedinput": "^16.0.0",
+    "itsa-react-textarea": "^16.0.0",
     "jsdom": "^7.2.2",
     "jsdom-global": "^1.6.1",
     "jshint": "^2.5.5",
     "mocha": "^1.21.4",
     "node-sass": "^3.4.2",
     "purecss": "^0.6.0",
+    "react": "^15.6.1",
     "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.6.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
